--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -25,6 +25,7 @@ label{
 }
 
 .form-control{
+	border-radius: 4px;
 	background:none;
 	color:#ffd700;
 
@@ -33,6 +34,10 @@ label{
 .form-control:focus{
 	border: 1px solid #ffd700;
 	box-shadow: 0px 0px 5px 0px #ffd700;
+}
+
+.giphsContainer{
+	background-color: red;
 }
 
 .myButton{
