--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -100,3 +100,51 @@ label{
 .row{
 	margin-top: 10px;
 }
+
+
+.myCard{
+	position:absolute;
+	left:0;
+	right:0;
+	bottom:0;
+	top:0;
+	margin:auto;
+	height:96%;
+	width:96%;
+	box-shadow: 5px 5px 10px #2f2f2f;
+	background-image: url("../images/ep_naturalblack.png");
+	border-radius: 5px;
+}
+
+.myCard:hover,
+.myCard:active{
+	cursor: pointer;
+	border:2px solid #ffd700;
+}
+
+.myCardWrapper{
+	height:200px;
+}
+
+.cardImage{
+	position:absolute;
+	left:0;
+	right:0;
+	top:0;
+	bottom:0;
+	margin: auto;
+	max-width:100%;
+	max-height:94%;
+}
+
+@media screen and (max-width: 768px) {
+	.myCard{
+		width:65%;
+	}
+}
+
+@media screen and (max-width: 500px) {
+	.myCard{
+		width:96%;
+	}
+}
