added loadAnimations for gifs still need to fix load animation prototype (oh boy)

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -102,6 +102,42 @@ label{
 }
 
 
+/**********************************************************************************
+Load Animation Styling
+***********************************************************************************/
+.loadContainer {
+	position: absolute;
+	margin: auto;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	height: 75px;
+	width: 75px;
+	-webkit-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    transform: rotate(270deg);
+}
+
+.circle {
+	position: absolute;
+	width: 12px;
+	height: 12px;
+	border-radius: 50%;
+	background-color: #ffd700;
+	display: none;
+	opacity:.75;
+}
+
+/**********************************************************************************
+END Load Animation Styling
+***********************************************************************************/
+
+/***********************************************************************************
+GIF Styling
+***********************************************************************************/
 .myCard{
 	position:absolute;
 	left:0;
@@ -136,6 +172,10 @@ label{
 	max-width:100%;
 	max-height:94%;
 }
+
+/***************************************************************************************************
+END Gif Styling
+***************************************************************************************************/
 
 @media screen and (max-width: 768px) {
 	.myCard{
